syntax = "proto3";

package product.v1;

option go_package = "product-catalog-service/proto/product/v1;productpb";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductReply);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductReply);
  rpc ActivateProduct(ActivateProductRequest) returns (ActivateProductReply);
  rpc DeactivateProduct(DeactivateProductRequest) returns (DeactivateProductReply);
  rpc ApplyDiscount(ApplyDiscountRequest) returns (ApplyDiscountReply);
  rpc RemoveDiscount(RemoveDiscountRequest) returns (RemoveDiscountReply);
  
  rpc GetProduct(GetProductRequest) returns (GetProductReply);
  rpc ListProducts(ListProductsRequest) returns (ListProductsReply);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  string category = 3;
  int64 base_price_numerator = 4;
  int64 base_price_denominator = 5;
}

message CreateProductReply {
  string product_id = 1;
}

message UpdateProductRequest {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
}

message UpdateProductReply {}

message ActivateProductRequest {
  string product_id = 1;
}

message ActivateProductReply {}

message DeactivateProductRequest {
  string product_id = 1;
}

message DeactivateProductReply {}

message ApplyDiscountRequest {
  string product_id = 1;
  int64 percent_numerator = 2;
  int64 percent_denominator = 3;
  int64 start_timestamp = 4;
  int64 end_timestamp = 5;
}

message ApplyDiscountReply {}

message RemoveDiscountRequest {
  string product_id = 1;
}

message RemoveDiscountReply {}

message GetProductRequest {
  string product_id = 1;
}

message GetProductReply {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  int64 base_price_numerator = 5;
  int64 base_price_denominator = 6;
  string status = 7;
  optional Discount discount = 8;
}

message Discount {
  int64 percent_numerator = 1;
  int64 percent_denominator = 2;
  int64 start_timestamp = 3;
  int64 end_timestamp = 4;
}

message ListProductsRequest {
  string category = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListProductsReply {
  repeated ProductInfo products = 1;
  string next_page_token = 2;
}

message ProductInfo {
  string product_id = 1;
  string name = 2;
  string category = 3;
  string status = 4;
}
